Closed Bug 173284 Opened 23 years ago Closed 23 years ago

Crash opening large emails; trunk [@ nsMsgDBView::CopyDBView]

Categories

(MailNews Core :: Database, defect)

x86
Windows 2000
defect
Not set
critical

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: greer, Assigned: timeless)

Details

(Keywords: crash, topcrash)

Crash Data

Attachments

(1 file)

David B / Seth, I'm not finding this signature in LXR has this code been removed? The running theme among the user comments is trying to open large emails/attachments. Stack Trace: nsMsgDBView::CopyDBView [c:/builds/seamonkey/mozilla/mailnews/base/src/nsMsgDBView.cpp line 5199] nsMsgThreadedDBView::CloneDBView [c:/builds/seamonkey/mozilla/mailnews/base/src/nsMsgThreadedDBView.cpp line 738] XPTC_InvokeByIndex [c:/builds/seamonkey/mozilla/xpcom/reflect/xptcall/src/md/win32/xptcinvoke.cpp line 106] XPCWrappedNative::CallMethod [c:/builds/seamonkey/mozilla/js/src/xpconnect/src/xpcwrappednative.cpp line 1996] XPC_WN_CallMethod [c:/builds/seamonkey/mozilla/js/src/xpconnect/src/xpcwrappednativejsops.cpp line 1267] js_Invoke [c:/builds/seamonkey/mozilla/js/src/jsinterp.c line 841] js_Interpret [c:/builds/seamonkey/mozilla/js/src/jsinterp.c line 2804] js_Invoke [c:/builds/seamonkey/mozilla/js/src/jsinterp.c line 857] js_InternalInvoke [c:/builds/seamonkey/mozilla/js/src/jsinterp.c line 932] JS_CallFunctionValue [c:/builds/seamonkey/mozilla/js/src/jsapi.c line 3433] nsJSContext::CallEventHandler [c:/builds/seamonkey/mozilla/dom/src/base/nsJSEnvironment.cpp line 1044] nsJSEventListener::HandleEvent [c:/builds/seamonkey/mozilla/dom/src/events/nsJSEventListener.cpp line 184] nsEventListenerManager::HandleEventSubType [c:/builds/seamonkey/mozilla/content/events/src/nsEventListenerManager.cpp line 1183] nsEventListenerManager::HandleEvent [c:/builds/seamonkey/mozilla/content/events/src/nsEventListenerManager.cpp line 1854] GlobalWindowImpl::HandleDOMEvent [c:/builds/seamonkey/mozilla/dom/src/base/nsGlobalWindow.cpp line 766] DocumentViewerImpl::LoadComplete [c:/builds/seamonkey/mozilla/content/base/src/nsDocumentViewer.cpp line 970] nsDocShell::EndPageLoad [c:/builds/seamonkey/mozilla/docshell/base/nsDocShell.cpp line 4094] nsWebShell::EndPageLoad [c:/builds/seamonkey/mozilla/docshell/base/nsWebShell.cpp line 816] nsDocShell::OnStateChange [c:/builds/seamonkey/mozilla/docshell/base/nsDocShell.cpp line 4028] nsDocLoaderImpl::FireOnStateChange [c:/builds/seamonkey/mozilla/uriloader/base/nsDocLoader.cpp line 1218] nsDocLoaderImpl::doStopDocumentLoad [c:/builds/seamonkey/mozilla/uriloader/base/nsDocLoader.cpp line 870] nsDocLoaderImpl::DocLoaderIsEmpty [c:/builds/seamonkey/mozilla/uriloader/base/nsDocLoader.cpp line 768] nsDocLoaderImpl::DocLoaderIsEmpty [c:/builds/seamonkey/mozilla/uriloader/base/nsDocLoader.cpp line 771] nsDocLoaderImpl::OnStopRequest [c:/builds/seamonkey/mozilla/uriloader/base/nsDocLoader.cpp line 699] nsLoadGroup::RemoveRequest [c:/builds/seamonkey/mozilla/netwerk/base/src/nsLoadGroup.cpp line 703] nsStreamIOChannel::OnStopRequest [c:/builds/seamonkey/mozilla/netwerk/base/src/nsInputStreamChannel.cpp line 486] nsOnStopRequestEvent::HandleEvent [c:/builds/seamonkey/mozilla/netwerk/base/src/nsRequestObserverProxy.cpp line 213] PL_HandleEvent [c:/builds/seamonkey/mozilla/xpcom/threads/plevent.c line 644] PL_ProcessPendingEvents [c:/builds/seamonkey/mozilla/xpcom/threads/plevent.c line 577] nsEventQueueImpl::ProcessPendingEvents [c:/builds/seamonkey/mozilla/xpcom/threads/nsEventQueue.cpp line 392] nsMsgAccountManager::cleanupOnExit [c:/builds/seamonkey/mozilla/mailnews/base/src/nsMsgAccountManager.cpp line 1104] 0x088b0674 Source File : c:/builds/seamonkey/mozilla/mailnews/base/src/nsMsgDBView.cpp line : 5199 (12189227) Comments: system hung up while checking e-mail (12184161) Comments: Just normal within Linux! I opend the Mail-Programm and it gave a very confusing alert like .... "Command DELE faild .... then my /var filled up". (12151268) Comments: opening an email with an 3MB zip file attachment. (12037816) Comments: using mail component (11857257) Comments: Pressed "Get Messages" (11853273) Comments: I was reading an HTML email with embeded images. The rendering is always very slow (the mouse is near to be frozen moving very slowly) and I started to swith from view in HTML to plain text but the mouse was to slow to do that. Thanks for your work (11853273) Comments: ! loic (11841109) Comments: iwas attempting to open a large email (11781629) Comments: While accessing the email (11678064) Comments: Trying to report a spammer the email had a background in it.
very odd - that stack trace is valid, I think, but we shouldn't be getting into that code when opening an e-mail, unless we're opening it into the stand-alone msg window.
QA Contact: gayatri → stephend
(30) 4 nsMsgDBView::CopyDBView Bug Status Result Owner Target Milestone Count StackSignature with offset 1 nsMsgDBView::CopyDBView cac288ba 1 nsMsgDBView::CopyDBView acf6c33d 1 nsMsgDBView::CopyDBView 7a69f0da 1 nsMsgDBView::CopyDBView 133366e3 Count Platform 2 Windows 98 4.10 build 67766446 1 Windows NT 5.1 build 2600 1 Windows 98 4.10 build 67766222 Count Buildid 2 2003011208 1 2003010608 1 2003010508 Count Most Common URL 3 1 mail-news crashed Build ID range: 2003010508 to 2003011208 Stack Trace: nsMsgDBView::CopyDBView [c:/builds/seamonkey/mozilla/mailnews/base/src/nsMsgDBView.cpp line 5507] nsMsgThreadedDBView::CloneDBView [c:/builds/seamonkey/mozilla/mailnews/base/src/nsMsgThreadedDBView.cpp line 738] XPTC_InvokeByIndex [c:/builds/seamonkey/mozilla/xpcom/reflect/xptcall/src/md/win32/xptcinvoke.cpp line 102] XPCWrappedNative::CallMethod [c:/builds/seamonkey/mozilla/js/src/xpconnect/src/xpcwrappednative.cpp line 2025] XPC_WN_CallMethod [c:/builds/seamonkey/mozilla/js/src/xpconnect/src/xpcwrappednativejsops.cpp line 1293] js_Invoke [c:/builds/seamonkey/mozilla/js/src/jsinterp.c line 841] js_Interpret [c:/builds/seamonkey/mozilla/js/src/jsinterp.c line 2804] js_Invoke [c:/builds/seamonkey/mozilla/js/src/jsinterp.c line 857] js_InternalInvoke [c:/builds/seamonkey/mozilla/js/src/jsinterp.c line 932] JS_CallFunctionValue [c:/builds/seamonkey/mozilla/js/src/jsapi.c line 3433] nsJSContext::CallEventHandler [c:/builds/seamonkey/mozilla/dom/src/base/nsJSEnvironment.cpp line 1043] nsJSEventListener::HandleEvent [c:/builds/seamonkey/mozilla/dom/src/events/nsJSEventListener.cpp line 183] nsEventListenerManager::HandleEventSubType [c:/builds/seamonkey/mozilla/content/events/src/nsEventListenerManager.cpp line 1217] nsEventListenerManager::HandleEvent [c:/builds/seamonkey/mozilla/content/events/src/nsEventListenerManager.cpp line 1901] GlobalWindowImpl::HandleDOMEvent [c:/builds/seamonkey/mozilla/dom/src/base/nsGlobalWindow.cpp line 805] DocumentViewerImpl::LoadComplete [c:/builds/seamonkey/mozilla/content/base/src/nsDocumentViewer.cpp line 965] nsDocShell::EndPageLoad [c:/builds/seamonkey/mozilla/docshell/base/nsDocShell.cpp line 4241] nsWebShell::EndPageLoad [c:/builds/seamonkey/mozilla/docshell/base/nsWebShell.cpp line 776] nsDocShell::OnStateChange [c:/builds/seamonkey/mozilla/docshell/base/nsDocShell.cpp line 4175] nsDocLoaderImpl::FireOnStateChange [c:/builds/seamonkey/mozilla/uriloader/base/nsDocLoader.cpp line 1213] nsDocLoaderImpl::doStopDocumentLoad [c:/builds/seamonkey/mozilla/uriloader/base/nsDocLoader.cpp line 867] nsDocLoaderImpl::DocLoaderIsEmpty [c:/builds/seamonkey/mozilla/uriloader/base/nsDocLoader.cpp line 765] nsDocLoaderImpl::OnStopRequest [c:/builds/seamonkey/mozilla/uriloader/base/nsDocLoader.cpp line 695] nsLoadGroup::RemoveRequest [c:/builds/seamonkey/mozilla/netwerk/base/src/nsLoadGroup.cpp line 703] nsJARChannel::OnStopRequest [c:/builds/seamonkey/mozilla/netwerk/protocol/jar/src/nsJARChannel.cpp line 610] nsOnStopRequestEvent::HandleEvent [c:/builds/seamonkey/mozilla/netwerk/base/src/nsRequestObserverProxy.cpp line 213] PL_HandleEvent [c:/builds/seamonkey/mozilla/xpcom/threads/plevent.c line 664] PL_ProcessPendingEvents [c:/builds/seamonkey/mozilla/xpcom/threads/plevent.c line 597] _md_EventReceiverProc [c:/builds/seamonkey/mozilla/xpcom/threads/plevent.c line 1380] KERNEL32.DLL + 0x24407 (0xbff94407) 0x00648b62 Source File : c:/builds/seamonkey/mozilla/mailnews/base/src/nsMsgDBView.cpp line : 5507 COMMENTS/URLs: (15826880) Comments: I was reading news in a private newsgroup servers featuring chinese charactesr. hmm.. after reading 50 or so messages in many different threads mozilla just gave me a crash.
Keywords: crash, topcrash
Summary: Crash opeing large emails [@ nsMsgDBView::CopyDBView] → Crash opeing large emails; trunk [@ nsMsgDBView::CopyDBView]
Summary: Crash opeing large emails; trunk [@ nsMsgDBView::CopyDBView] → Crash opening large emails; trunk [@ nsMsgDBView::CopyDBView]
Attached patch guessSplinter Review
Attachment #111728 - Flags: superreview?(roc+moz)
Attachment #111728 - Flags: review?(bienvenu)
well, it should work :)
Assignee: bienvenu → timeless
Comment on attachment 111728 [details] [diff] [review] guess r=bienvenu, that's probably why it's crashing. Not sure why m_db should be null, though.
Attachment #111728 - Flags: review?(bienvenu) → review+
I don't think we should check in a band-aid until we know why m_db is null. We might want to skip more code if there was some kind of failure.
there are null checks for m_db at various places in that file, m_db is only set if open or savesortinfo are called; also open only adds a listener if m_db.
Status: NEW → ASSIGNED
Comment on attachment 111728 [details] [diff] [review] guess sr=roc+moz
Attachment #111728 - Flags: superreview?(roc+moz) → superreview+
checked in
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
0 crashes found where the Stack Signature contains 'nsmsgdbview::copydbview'.
Status: RESOLVED → VERIFIED
Product: MailNews → Core
Product: Core → MailNews Core
Crash Signature: [@ nsMsgDBView::CopyDBView]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: