Bug 173284 Crash opening large emails; trunk [@ nsMsgDBView::CopyDBView] r=bienvenu sr=roc+moz